acpi/hmat: Fix lockdep warning for hmem_register_resource() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56296,6 +56296,7 @@
 	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
 	patches.suse/drm-xe-guc-Synchronize-Dead-CT-worker-with-unbind.patch
 	patches.suse/ASoC-tas2781-fix-getting-the-wrong-device-number.patch
+	patches.suse/acpi-hmat-Fix-lockdep-warning-for-hmem_register_reso.patch
 
 	########################################################
 	# end of sorted patches
