drm/amd/display: Allow VRR params change if unsynced with the stream (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56297,6 +56297,7 @@
 	patches.suse/drm-xe-guc-Synchronize-Dead-CT-worker-with-unbind.patch
 	patches.suse/ASoC-tas2781-fix-getting-the-wrong-device-number.patch
 	patches.suse/acpi-hmat-Fix-lockdep-warning-for-hmem_register_reso.patch
+	patches.suse/drm-amd-display-Allow-VRR-params-change-if-unsynced-.patch
 
 	########################################################
 	# end of sorted patches
