ASoC: codecs: va-macro: fix resource leak in probe error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13239,6 +13239,7 @@
 	patches.suse/crypto-hisilicon-qm-Fix-device-reference-leak-in-qm_.patch
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-dereference-in-snd_u.patch
 	patches.suse/ASoC-cs4271-Fix-regulator-leak-on-probe-failure.patch
+	patches.suse/ASoC-codecs-va-macro-fix-resource-leak-in-probe-erro.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
