crypto: hisilicon/qm - Fix device reference leak in qm_get_qos_value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13236,6 +13236,7 @@
 	patches.suse/ACPI-CPPC-Limit-perf-ctrs-in-PCC-check-only-to-onlin.patch
 	patches.suse/PM-hibernate-Emit-an-error-when-image-writing-fails.patch
 	patches.suse/PM-hibernate-Use-atomic64_t-for-compressed_size-vari.patch
+	patches.suse/crypto-hisilicon-qm-Fix-device-reference-leak-in-qm_.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
