--- a/series.conf
+++ b/series.conf
@@ -13240,6 +13240,7 @@
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-dereference-in-snd_u.patch
 	patches.suse/ASoC-cs4271-Fix-regulator-leak-on-probe-failure.patch
 	patches.suse/ASoC-codecs-va-macro-fix-resource-leak-in-probe-erro.patch
+	patches.suse/ASoC-tas2781-fix-getting-the-wrong-device-number.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
