--- a/series.conf
+++ b/series.conf
@@ -13246,6 +13246,7 @@
 	patches.suse/acpi-srat-Fix-incorrect-device-handle-check-for-Gene.patch
 	patches.suse/acpi-hmat-Fix-lockdep-warning-for-hmem_register_reso.patch
 	patches.suse/mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM_DEFAUL.patch
+	patches.suse/mmc-dw_mmc-rockchip-Fix-wrong-internal-phase-calcula.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
