--- a/series.conf
+++ b/series.conf
@@ -13238,6 +13238,7 @@
 	patches.suse/PM-hibernate-Use-atomic64_t-for-compressed_size-vari.patch
 	patches.suse/crypto-hisilicon-qm-Fix-device-reference-leak-in-qm_.patch
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-dereference-in-snd_u.patch
+	patches.suse/ASoC-cs4271-Fix-regulator-leak-on-probe-failure.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
