ALSA: usb-audio: Fix NULL pointer dereference in snd_usb_mixer_controls_badd (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13237,6 +13237,7 @@
 	patches.suse/PM-hibernate-Emit-an-error-when-image-writing-fails.patch
 	patches.suse/PM-hibernate-Use-atomic64_t-for-compressed_size-vari.patch
 	patches.suse/crypto-hisilicon-qm-Fix-device-reference-leak-in-qm_.patch
+	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-dereference-in-snd_u.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
