acpi/hmat: Fix lockdep warning for hmem_register_resource() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13244,6 +13244,7 @@
 	patches.suse/regulator-fixed-fix-GPIO-descriptor-leak-on-register.patch
 	patches.suse/spi-Try-to-get-ACPI-GPIO-IRQ-earlier.patch
 	patches.suse/acpi-srat-Fix-incorrect-device-handle-check-for-Gene.patch
+	patches.suse/acpi-hmat-Fix-lockdep-warning-for-hmem_register_reso.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
