--- a/series.conf
+++ b/series.conf
@@ -13241,6 +13241,7 @@
 	patches.suse/ASoC-cs4271-Fix-regulator-leak-on-probe-failure.patch
 	patches.suse/ASoC-codecs-va-macro-fix-resource-leak-in-probe-erro.patch
 	patches.suse/ASoC-tas2781-fix-getting-the-wrong-device-number.patch
+	patches.suse/regulator-fixed-fix-GPIO-descriptor-leak-on-register.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
