acpi,srat: Fix incorrect device handle check for Generic Initiator (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13243,6 +13243,7 @@
 	patches.suse/ASoC-tas2781-fix-getting-the-wrong-device-number.patch
 	patches.suse/regulator-fixed-fix-GPIO-descriptor-leak-on-register.patch
 	patches.suse/spi-Try-to-get-ACPI-GPIO-IRQ-earlier.patch
+	patches.suse/acpi-srat-Fix-incorrect-device-handle-check-for-Gene.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
