--- a/series.conf
+++ b/series.conf
@@ -13248,6 +13248,7 @@
 	patches.suse/mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM_DEFAUL.patch
 	patches.suse/mmc-dw_mmc-rockchip-Fix-wrong-internal-phase-calcula.patch
 	patches.suse/drm-amd-display-Allow-VRR-params-change-if-unsynced-.patch
+	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
