x86/vmscape: Add old Intel CPUs to affected list (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12187,6 +12187,7 @@
 	patches.suse/x86-vmscape-Enable-the-mitigation.patch
 	patches.suse/x86-bugs-Move-cpu_bugs_smt_update-down.patch
 	patches.suse/x86-vmscape-Warn-when-STIBP-is-disabled-with-SMT.patch
+	patches.suse/x86-vmscape-Add-old-Intel-CPUs-to-affected-list.patch
 	patches.suse/mm-damon-core-set-quota-charged_from-to-jiffies-at-f.patch
 	patches.suse/mm-damon-lru_sort-avoid-divide-by-zero-in-damon_lru_.patch
 	patches.suse/mm-damon-reclaim-avoid-divide-by-zero-in-damon_recla.patch
