x86/mm: Ensure clear_page() variants always have __kcfi_typeid_ symbols (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12936,6 +12936,7 @@
 	patches.suse/drm-ast-Clear-preserved-bits-from-register-output-va.patch
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
 	patches.suse/x86-CPU-AMD-Add-RDSEED-fix-for-Zen5.patch
+	patches.suse/x86-mm-Ensure-clear_page-variants-always-have-__kcfi_typei.patch
 	patches.suse/regmap-slimbus-fix-bus_context-pointer-in-regmap-ini.patch
 	patches.suse/regulator-bd718x7-Fix-voltages-scaled-by-resistor-di.patch
 	patches.suse/btrfs-ensure-no-dirty-metadata-is-written-back-for-a.patch
