--- a/series.conf
+++ b/series.conf
@@ -12878,6 +12878,7 @@
 	patches.suse/drm-panthor-Fix-kernel-panic-on-partial-unmap-of-a-G.patch
 	patches.suse/drm-panic-Fix-drawing-the-logo-on-a-small-narrow-scr.patch
 	patches.suse/drm-panic-Fix-qr_code-ensure-vmargin-is-positive.patch
+	patches.suse/x86-microcode-Fix-Entrysign-revision-check-for-Zen1-Naples.patch
 	patches.suse/xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC-read-r.patch
 	patches.suse/xhci-dbc-enable-back-DbC-in-resume-if-it-was-enabled.patch
 	patches.suse/serial-8250_exar-add-support-for-Advantech-2-port-car.patch
