--- a/series.conf
+++ b/series.conf
@@ -12984,6 +12984,7 @@
 	patches.suse/NFSD-Skip-close-replay-processing-if-XDR-encoding-fails.patch
 	patches.suse/NFSD-Never-cache-a-COMPOUND-when-the-SEQUENCE-operation-fails.patch
 	patches.suse/erofs-avoid-infinite-loop-due-to-incomplete-zstd-compressed-data.patch
+	patches.suse/x86-microcode-AMD-Add-Zen5-model-0x44-stepping-0x1-minrev.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
