x86/traps: Initialize DR7 by writing its architectural reset value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10529,6 +10529,7 @@
 	patches.suse/i2c-omap-Fix-an-error-handling-path-in-omap_i2c_prob.patch
 	patches.suse/perf-aux-Fix-pending-disable-flow-when-the-AUX-ring-buffer.patch
 	patches.suse/x86-traps-Initialize-DR6-by-writing-its-architectural-rese.patch
+	patches.suse/x86-traps-Initialize-DR7-by-writing-its-architectural-rese.patch
 	patches.suse/vt-add-missing-notification-when-switching-back-to-t.patch
 	patches.suse/serial-core-restore-of_node-information-in-sysfs.patch
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
