x86/e820: Fix handling of subpage regions when calculating nosave  ranges in e820__register_nosave_regions() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8428,6 +8428,7 @@
 	patches.suse/objtool-Stop-UNRET-validation-on-UD2.patch
 	patches.suse/perf-core-Fix-WARN_ON-ctx-in-__free_event-for-partial-init.patch
 	patches.suse/perf-Fix-hang-while-freeing-sigtrap-event.patch
+	patches.suse/x86-e820-Fix-handling-of-subpage-regions-when-calculating-.patch
 	patches.suse/x86-bugs-Rename-entry_ibpb-to-write_ibpb.patch
 	patches.suse/x86-bugs-Use-SBPB-in-write_ibpb-if-applicable.patch
 	patches.suse/x86-bugs-Fix-RSB-clearing-in-indirect_branch_prediction_ba.patch
