--- a/series.conf
+++ b/series.conf
@@ -7962,6 +7962,7 @@
 	patches.suse/x86-Kconfig-Always-enable-ARCH_SPARSEMEM_ENABLE.patch
 	patches.suse/x86-speculation-Remove-the-extra-ifdef-around-CALL_NOSPEC.patch
 	patches.suse/x86-entry-Fix-ORC-unwinder-for-PUSH_REGS-with-save_ret-1.patch
+	patches.suse/x86-dumpstack-Fix-inaccurate-unwinding-from-exception-stac.patch
 	patches.suse/x86-mm-pat-Fix-VM_PAT-handling-when-fork-fails-in-copy_pag.patch
 	patches.suse/x86-microcode-AMD-Fix-__apply_microcode_amd-s-return-value.patch
 	patches.suse/module-Begin-to-move-from-RCU-sched-to-RCU.patch
