--- a/series.conf
+++ b/series.conf
@@ -8635,6 +8635,7 @@
 	patches.suse/perf-x86-intel-Allow-to-update-user-space-GPRs-from-PEBS-r.patch
 	patches.suse/x86-xen-Fix-__xen_hypercall_setfunc.patch
 	patches.suse/x86-microcode-AMD-Extend-the-SHA-check-to-Zen5-block-loadi.patch
+	patches.suse/x86-cpu-Add-CPU-model-number-for-Bartlett-Lake-CPUs-with-R.patch
 	patches.suse/x86-cpu-amd-Fix-workaround-for-erratum-1054.patch
 	patches.suse/Revert-smb-client-fix-TCP-timers-deadlock-after-rmmod-.patch
 	patches.suse/drm-amdgpu-use-a-dummy-owner-for-sysfs-triggered-cle.patch
