--- a/series.conf
+++ b/series.conf
@@ -5594,6 +5594,7 @@
 	patches.suse/PM-hibernate-Add-error-handling-for-syscore_suspend.patch
 	patches.suse/PM-sleep-core-Synchronize-runtime-PM-status-of-paren.patch
 	patches.suse/ACPI-x86-Add-skip-i2c-clients-quirk-for-Vexia-EDU-AT.patch
+	patches.suse/x86-acpi-Fix-LAPIC-x2APIC-parsing-order.patch
 	patches.suse/perf-trace-Fix-BPF-loading-failure-E2BIG.patch
 	patches.suse/perf-annotate-Use-an-array-for-the-disassembler-preference.patch
 	patches.suse/perf-trace-Fix-runtime-error-of-index-out-of-bounds.patch
