Input: atmel_mxt_ts - allow reset GPIO to sleep (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13007,6 +13007,7 @@
 	patches.suse/crypto-rng-Ensure-set_ent-is-always-present.patch
 	patches.suse/Input-uinput-zero-initialize-uinput_ff_upload_compat.patch
 	patches.suse/Input-psxpad-spi-add-a-check-for-the-return-value-of.patch
+	patches.suse/Input-atmel_mxt_ts-allow-reset-GPIO-to-sleep.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-redundant-mbox_controller_.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
