--- a/blacklist.conf
+++ b/blacklist.conf
@@ -59,6 +59,7 @@ drivers/staging/android
 drivers/video/fbdev/hyperv_fb.c
 drivers/cpuidle/cpuidle-riscv-sbi.c     # RISC-V not supported
 tools/include/nolibc/			# nolibc not supported
+tools/power/				# not built from kernel source
 tools/testing/kunit/qemu_configs/sparc.py	# SPARC-32 not supported
 tools/testing/selftests/nolibc		# nolibc not supported
 tools/testing/selftests/riscv		# RISC-V not supported
