blacklist.conf: kABI

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -611,3 +611,4 @@ bd2703b42decebdcddf76e277ba76b4c4a142d73 # code change without security impact, 
 b53e523261bf058ea4a518b482222e7a277b186b # Intrusive io_uring change for small benefit without further patches
 4ec703ec0c384a2199808c4eb2e9037236285a8d # Issue not-present due to missing backport that partially introduced it.
 178b8ff66ff827c41b4fa105e9aabb99a0b5c537 # invasive fix without obvious gains
+6418a8504187dc7f5b6f9d0649c03e362cb0664b # cleanup that breaks kABI
