x86/amd_node: Fix AMD root device caching (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12981,6 +12981,7 @@
 	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
 	patches.suse/drm-mediatek-Add-pm_runtime-support-for-GCE-power-co.patch
 	patches.suse/drm-xe-guc-Synchronize-Dead-CT-worker-with-unbind.patch
+	patches.suse/x86-amd_node-Fix-AMD-root-device-caching.patch
 	patches.suse/x86-microcode-AMD-Add-more-known-models-to-entry-sign-chec.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.suse/btrfs-do-not-update-last_log_commit-when-logging-ino.patch
