pnfs: Set transport security policy to RPC_XPRTSEC_NONE unless using TLS (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12981,6 +12981,7 @@
 	patches.suse/NFSD-Never-cache-a-COMPOUND-when-the-SEQUENCE-operation-fails.patch
 	patches.suse/erofs-avoid-infinite-loop-due-to-incomplete-zstd-compressed-data.patch
 	patches.suse/pnfs-Fix-TLS-logic-in-_nfs4_pnfs_v4_ds_connect.patch
+	patches.suse/pnfs-Set-transport-security-policy-to-RPC_XPRTSEC_NONE-unless-using-TLS.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
