NFS: sysfs: fix leak when nfs_client kobject add fails (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12982,6 +12982,7 @@
 	patches.suse/erofs-avoid-infinite-loop-due-to-incomplete-zstd-compressed-data.patch
 	patches.suse/pnfs-Fix-TLS-logic-in-_nfs4_pnfs_v4_ds_connect.patch
 	patches.suse/pnfs-Set-transport-security-policy-to-RPC_XPRTSEC_NONE-unless-using-TLS.patch
+	patches.suse/NFS-sysfs-fix-leak-when-nfs_client-kobject-add-fails.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
