--- a/series.conf
+++ b/series.conf
@@ -12983,6 +12983,7 @@
 	patches.suse/pnfs-Fix-TLS-logic-in-_nfs4_pnfs_v4_ds_connect.patch
 	patches.suse/pnfs-Set-transport-security-policy-to-RPC_XPRTSEC_NONE-unless-using-TLS.patch
 	patches.suse/NFS-sysfs-fix-leak-when-nfs_client-kobject-add-fails.patch
+	patches.suse/NFSv4-Fix-an-incorrect-parameter-when-calling-nfs4_call_sync.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
