--- a/series.conf
+++ b/series.conf
@@ -13472,6 +13472,7 @@
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
 	patches.suse/sched-fair-Reimplement-NEXT_BUDDY-to-align-with-EEVDF-goals.patch
 	patches.suse/sched-fair-Revert-max_newidle_lb_cost-bump.patch
+	patches.suse/sched-fair-Small-cleanup-to-sched_balance_newidle.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
