mm/shmem: fix THP allocation and fallback loop (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12971,6 +12971,7 @@
 	patches.suse/drm-mediatek-Add-pm_runtime-support-for-GCE-power-co.patch
 	patches.suse/drm-xe-guc-Synchronize-Dead-CT-worker-with-unbind.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
+	patches.suse/mm-shmem-fix-THP-allocation-and-fallback-loop.patch
 	patches.suse/btrfs-do-not-update-last_log_commit-when-logging-ino.patch
 	patches.suse/btrfs-scrub-put-bio-after-errors-in-scrub_raid56_par.patch
 	patches.suse/btrfs-release-root-after-error-in-data_reloc_print_w.patch
