mm/secretmem: fix use-after-free race in fault handler (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35005,6 +35005,7 @@
 	patches.suse/drm-amd-Fix-suspend-failure-with-secure-display-TA.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.suse/mm-mm_init-fix-hash-table-order-logging-in-alloc_lar.patch
+	patches.suse/mm-secretmem-fix-use-after-free-race-in-fault-handle.patch
 	patches.suse/btrfs-do-not-update-last_log_commit-when-logging-ino.patch
 	patches.suse/btrfs-scrub-put-bio-after-errors-in-scrub_raid56_par.patch
 	patches.suse/NFSD-free-copynotify-stateid-in-nfs4_free_ol_stateid.patch
