--- a/blacklist.conf
+++ b/blacklist.conf
@@ -276,6 +276,7 @@ a5d258a00b41143d9c64880eed35799d093c4782 # amdgpu: reverting the above
 46e15197b513e60786a44107759d6ca293d6288c # amdgpu: bogus stable 6.12.y backport
 b47a1f9323c2085940599fb292902f27cf2247a1 # amdgpu: bogus stable 6.12.y backport
 44059790a5cb9258ae6137387e4c39b717fd2ced # pure cleanup
+d1af1f02ef8653dea4573e444136c8331189cd59 # optimization
 
 # SLE15-SP6
 adfbae9ffe339eed08d54a4eb87c93f4b35f214b # drm/i915: cherry-picked d1691bb22eba23a0131f1bde41d268bb0ebb0f59
