--- a/series.conf
+++ b/series.conf
@@ -13572,6 +13572,7 @@
 	patches.suse/sched-fair-Workaround-NO_RUN_TO_PARITY-fix-kabi.patch
 	patches.suse/sched-deadline-Less-agressive-dl_server-handling-KABI.patch
 	patches.suse/sched-psi-Optimize-psi_group_change-cpu_clock-usage-KABI.patch
+	patches.kabi/sched-fair-Proportional-newidle-balance-KABI.patch
 
 	########################################################
 	# Memory management
