--- a/blacklist.conf
+++ b/blacklist.conf
@@ -612,3 +612,4 @@ b53e523261bf058ea4a518b482222e7a277b186b # Intrusive io_uring change for small b
 4ec703ec0c384a2199808c4eb2e9037236285a8d # Issue not-present due to missing backport that partially introduced it.
 178b8ff66ff827c41b4fa105e9aabb99a0b5c537 # invasive fix without obvious gains
 6418a8504187dc7f5b6f9d0649c03e362cb0664b # cleanup that breaks kABI
+6851a0c228fc040dce8e4c393004209e7372e0a3 # cleanup that breaks kABI
