--- a/series.conf
+++ b/series.conf
@@ -10664,6 +10664,7 @@
 	patches.suse/xhci-Disable-stream-for-xHC-controller-with-XHCI_BRO.patch
 	patches.suse/xhci-dbctty-disable-ECHO-flag-by-default.patch
 	patches.suse/xhci-dbc-Flush-queued-requests-before-stopping-dbc.patch
+	patches.suse/usb-hub-Fix-flushing-of-delayed-work-used-for-post-r.patch
 	patches.suse/platform-mellanox-mlxbf-tmfifo-fix-vring_desc.len-as.patch
 	patches.suse/platform-x86-asus-nb-wmi-add-DMI-quirk-for-ASUS-Zenb.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Fix-duplicate-event-ID-f.patch
