--- a/series.conf
+++ b/series.conf
@@ -12583,6 +12583,7 @@
 	patches.suse/IB-ipoib-Ignore-L3-master-device.patch
 	patches.suse/IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
 	patches.suse/RDMA-rxe-Fix-race-in-do_task-when-draining.patch
+	patches.suse/RDMA-irdma-Remove-unused-struct-irdma_cq-fields.patch
 	patches.suse/RDMA-siw-Always-report-immediate-post-SQ-errors.patch
 	patches.suse/scsi-pm80xx-Fix-array-index-out-of-of-bounds-on-rmmod.patch
 	patches.suse/scsi-libsas-Add-dev_parent_is_expander-helper.patch
