cpufreq: ti: Add support for AM62D2 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12477,6 +12477,7 @@
 	patches.suse/i3c-master-svc-Use-manual-response-for-IBI-events.patch
 	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
 	patches.suse/cpufreq-scmi-Account-for-malformed-DT-in-scmi_dev_used_by_cpus.patch
+	patches.suse/cpufreq-ti-Add-support-for-AM62D2.patch
 	patches.suse/cpufreq-intel_pstate-Fix-object-lifecycle-issue-in-update_qos_request.patch
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 	patches.suse/PM-devfreq-rockchip-dfi-double-count-on-RK3588.patch
