--- a/series.conf
+++ b/series.conf
@@ -13285,6 +13285,7 @@
 	patches.suse/ACPI-CPPC-Check-_CPC-validity-for-only-the-online-CP.patch
 	patches.suse/ACPI-CPPC-Perform-fast-check-switch-only-for-online-.patch
 	patches.suse/ACPI-CPPC-Limit-perf-ctrs-in-PCC-check-only-to-onlin.patch
+	patches.suse/cpufreq-intel_pstate-Check-IDA-only-before-MSR_IA32_PERF_CTL-writes.patch
 	patches.suse/PM-hibernate-Emit-an-error-when-image-writing-fails.patch
 	patches.suse/PM-hibernate-Use-atomic64_t-for-compressed_size-vari.patch
 	patches.suse/crypto-hisilicon-qm-Fix-device-reference-leak-in-qm_.patch
