--- a/series.conf
+++ b/series.conf
@@ -12481,6 +12481,7 @@
 	patches.suse/cpufreq-intel_pstate-Fix-object-lifecycle-issue-in-update_qos_request.patch
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 	patches.suse/PM-devfreq-rockchip-dfi-double-count-on-RK3588.patch
+	patches.suse/cpuidle-Fail-cpuidle-device-registration-if-there-is-one-already.patch
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
 	patches.suse/PM-hibernate-Add-pm_hibernation_mode_is_suspend.patch
 	patches.suse/drm-amd-Fix-hybrid-sleep.patch
