--- a/series.conf
+++ b/series.conf
@@ -35031,6 +35031,7 @@
 	patches.suse/acpi-srat-Fix-incorrect-device-handle-check-for-Gene.patch
 	patches.suse/mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM_DEFAUL.patch
 	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
+	patches.suse/mtdchar-fix-integer-overflow-in-read-write-ioctls.patch
 
 	########################################################
 	# end of sorted patches
