--- a/series.conf
+++ b/series.conf
@@ -35032,6 +35032,7 @@
 	patches.suse/mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM_DEFAUL.patch
 	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
 	patches.suse/mtdchar-fix-integer-overflow-in-read-write-ioctls.patch
+	patches.suse/mtd-rawnand-cadence-fix-DMA-device-NULL-pointer-dere.patch
 
 	########################################################
 	# end of sorted patches
