usb: acpi: fix device link removal (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13791,6 +13791,7 @@
 	patches.kabi/kABI-fix-for-struct-hrtimer_cpu_base.patch
 	patches.kabi/PCI-qcom-Add-equalization-settings-for-8.0-GT-s-and-3.patch
 	patches.kabi/PATCH-usb-hub-Fix-flushing-of-delayed-work-used-for-.patch
+	patches.kabi/usb-acpi-fix-device-link-removal.patch
 
 	########################################################
 	# preempt-rt backport converged
