--- a/blacklist.conf
+++ b/blacklist.conf
@@ -610,3 +610,4 @@ bd2703b42decebdcddf76e277ba76b4c4a142d73 # code change without security impact, 
 b53e523261bf058ea4a518b482222e7a277b186b # Intrusive io_uring change for small benefit without further patches
 4ec703ec0c384a2199808c4eb2e9037236285a8d # Issue not-present due to missing backport that partially introduced it.
 178b8ff66ff827c41b4fa105e9aabb99a0b5c537 # invasive fix without obvious gains
+306d40aa53b671ea72c3bf272f85ccb6c1b0bc65 # comment cleanup
