uprobes: Fix race in uprobe_free_utask (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -3624,6 +3624,7 @@
 	patches.suse/tracing-kprobes-Fix-to-free-objects-when-failed-to-copy-a-.patch
 	patches.suse/x86-static-call-Remove-early_boot_irqs_disabled-chec.patch
 	patches.suse/x86-fpu-Ensure-shadow-stack-is-active-before-getting-regis.patch
+	patches.suse/uprobes-Fix-race-in-uprobe_free_utask.patch
 	patches.suse/KVM-e500-always-restore-irqs.patch
 	patches.suse/KVM-e500-use-shadow-TLB-entry-as-witness-for-writabi.patch
 	patches.suse/KVM-e500-track-host-writability-of-pages.patch
