tracing: gfp: Fix the GFP enum values shown for user space tracing tools (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -3798,6 +3798,7 @@
 	patches.suse/reset-rzg2l-usbphy-ctrl-Assign-proper-of-node-to-the.patch
 	patches.suse/soc-ti-pruss-Fix-pruss-APIs.patch
 	patches.suse/of-unittest-Add-test-that-of_address_to_resource-fai.patch
+	patches.suse/tracing-gfp-Fix-the-GFP-enum-values-shown-for-user-space-t.patch
 	patches.suse/sched-fair-Fix-EEVDF-entity-placement-bug-causing-scheduling-lag.patch
 	patches.suse/sched-fair-Fix-update_cfs_group-vs-DELAY_DEQUEUE.patch
 	patches.suse/irqchip-gic-v3-Handle-CPU_PM_ENTER_FAILED-correctly.patch
