ring-buffer: Unlock resize on mmap error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5915,6 +5915,7 @@
 	patches.suse/s390-cio-Fix-CHPID-configure-attribute-caching.patch
 	patches.suse/s390-pci-Pull-search-for-parent-PF-out-of-zpci_iov_setup_virtfn.patch
 	patches.suse/s390-pci-Fix-handling-of-isolated-VFs.patch
+	patches.suse/ring-buffer-Unlock-resize-on-mmap-error.patch
 	patches.suse/ring-buffer-Validate-the-persistent-meta-data-subbuf-array.patch
 	patches.suse/tracing-Do-not-allow-mmap-of-persistent-ring-buffer.patch
 	patches.suse/KVM-arm64-Improve-error-handling-from-check_host_sha.patch
