ring-buffer: Update pages_touched to reflect persistent buffer content (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5919,6 +5919,7 @@
 	patches.suse/tracing-Have-the-error-of-__tracing_resize_ring_buffer-pas.patch
 	patches.suse/ring-buffer-Validate-the-persistent-meta-data-subbuf-array.patch
 	patches.suse/tracing-Do-not-allow-mmap-of-persistent-ring-buffer.patch
+	patches.suse/ring-buffer-Update-pages_touched-to-reflect-persistent-buf.patch
 	patches.suse/KVM-arm64-Improve-error-handling-from-check_host_sha.patch
 	patches.suse/KVM-arm64-Simplify-np-guest-hypercalls.patch
 	patches.suse/KVM-arm64-Fix-__pkvm_host_mkyoung_guest-return-value.patch
