mtd: rawnand: cadence: fix DMA device NULL pointer dereference (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13307,6 +13307,7 @@
 	patches.suse/x86-CPU-AMD-Add-additional-fixed-RDSEED-microcode-revision.patch
 	patches.suse/x86-microcode-AMD-Add-Zen5-model-0x44-stepping-0x1-minrev.patch
 	patches.suse/mtdchar-fix-integer-overflow-in-read-write-ioctls.patch
+	patches.suse/mtd-rawnand-cadence-fix-DMA-device-NULL-pointer-dere.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
