--- a/series.conf
+++ b/series.conf
@@ -13308,6 +13308,7 @@
 	patches.suse/x86-microcode-AMD-Add-Zen5-model-0x44-stepping-0x1-minrev.patch
 	patches.suse/mtdchar-fix-integer-overflow-in-read-write-ioctls.patch
 	patches.suse/mtd-rawnand-cadence-fix-DMA-device-NULL-pointer-dere.patch
+	patches.suse/mtd-onenand-Pass-correct-pointer-to-IRQ-handler.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
