--- a/series.conf
+++ b/series.conf
@@ -13307,6 +13307,10 @@
 	patches.suse/x86-CPU-AMD-Add-additional-fixed-RDSEED-microcode-revision.patch
 	patches.suse/x86-microcode-AMD-Add-Zen5-model-0x44-stepping-0x1-minrev.patch
 
+	# tip/tip
+	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
+	patches.suse/sched-fair-Reimplement-NEXT_BUDDY-to-align-with-EEVDF-goals.patch
+
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
 
@@ -13391,12 +13395,6 @@
 	########################################################
 	# Scheduler
 	########################################################
-
-	# Under review series that queues wakees prior to more
-	# eligible tasks under limited circumstances. Primarily
-	# of important to dbench under xfs
-	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
-	patches.suse/sched-fair-Reimplement-NEXT_BUDDY-to-align-with-EEVDF-goals.patch
 
 	# Under review patch that reduces cache line misses on
 	# overloaded systems during LB
