PM: sleep: Update power.smart_suspend under PM spinlock (jsc#PED-13973).

--- a/series.conf
+++ b/series.conf
@@ -7033,6 +7033,7 @@
 	patches.suse/PM-sleep-Avoid-unnecessary-checks-in-device_prepare_.patch
 	patches.suse/PM-hibernate-Avoid-deadlock-in-hibernate_compressor_.patch
 	patches.suse/PM-sleep-Adjust-check-before-setting-power.must_resu.patch
+	patches.suse/PM-sleep-Update-power.smart_suspend-under-PM-spinloc.patch
 	patches.suse/PM-sleep-Rename-power.async_in_progress-to-power.wor.patch
 	patches.suse/PM-sleep-Remove-unused-pm_generic_-wrappers.patch
 	patches.suse/PM-sleep-Fix-handling-devices-with-direct_complete-s.patch
