PM: core: Tweak pm_runtime_block_if_disabled() return value (jsc#PED-13973).

--- a/series.conf
+++ b/series.conf
@@ -7034,6 +7034,7 @@
 	patches.suse/PM-hibernate-Avoid-deadlock-in-hibernate_compressor_.patch
 	patches.suse/PM-sleep-Adjust-check-before-setting-power.must_resu.patch
 	patches.suse/PM-sleep-Update-power.smart_suspend-under-PM-spinloc.patch
+	patches.suse/PM-core-Tweak-pm_runtime_block_if_disabled-return-va.patch
 	patches.suse/PM-sleep-Rename-power.async_in_progress-to-power.wor.patch
 	patches.suse/PM-sleep-Remove-unused-pm_generic_-wrappers.patch
 	patches.suse/PM-sleep-Fix-handling-devices-with-direct_complete-s.patch
