--- a/series.conf
+++ b/series.conf
@@ -7036,6 +7036,7 @@
 	patches.suse/PM-sleep-Update-power.smart_suspend-under-PM-spinloc.patch
 	patches.suse/PM-core-Tweak-pm_runtime_block_if_disabled-return-va.patch
 	patches.suse/PM-sleep-Rename-power.async_in_progress-to-power.wor.patch
+	patches.suse/PM-sleep-Rearrange-dpm_async_fn-and-async-state-clea.patch
 	patches.suse/PM-sleep-Remove-unused-pm_generic_-wrappers.patch
 	patches.suse/PM-sleep-Fix-handling-devices-with-direct_complete-s.patch
 	patches.suse/PM-sleep-Fix-bit-masking-operation.patch
