PM: sleep: core: Fix indentation in dpm_wait_for_children() (jsc#PED-13973).

--- a/series.conf
+++ b/series.conf
@@ -7038,6 +7038,7 @@
 	patches.suse/PM-sleep-Rename-power.async_in_progress-to-power.wor.patch
 	patches.suse/PM-sleep-Rearrange-dpm_async_fn-and-async-state-clea.patch
 	patches.suse/PM-sleep-Remove-unused-pm_generic_-wrappers.patch
+	patches.suse/PM-sleep-core-Fix-indentation-in-dpm_wait_for_childr.patch
 	patches.suse/PM-sleep-Fix-handling-devices-with-direct_complete-s.patch
 	patches.suse/PM-sleep-Fix-bit-masking-operation.patch
 	patches.suse/PM-clk-remove-unused-of_pm_clk_add_clk.patch
