PM: clk: Remove unused pm_clk_remove() (jsc#PED-13973).

--- a/series.conf
+++ b/series.conf
@@ -7042,6 +7042,7 @@
 	patches.suse/PM-sleep-Fix-handling-devices-with-direct_complete-s.patch
 	patches.suse/PM-sleep-Fix-bit-masking-operation.patch
 	patches.suse/PM-clk-remove-unused-of_pm_clk_add_clk.patch
+	patches.suse/PM-clk-Remove-unused-pm_clk_remove.patch
 	patches.suse/thermal-int340x-Add-NULL-check-for-adev.patch
 	patches.suse/selinux-always-check-the-file-label-in-selinux_kerne.patch
 	patches.suse/selinux-Chain-up-tool-resolving-errors-in-install_po.patch
