powerpc: Add preempt lazy support (jec#PED-14173).
- Update config files.

--- a/series.conf
+++ b/series.conf
@@ -3999,6 +3999,7 @@
 	patches.suse/perf-dwc_pcie-Qualify-RAS-DES-VSEC-Capability-by-Ven.patch
 	patches.suse/perf-imx9_perf-Introduce-AXI-filter-version-to-refactor-the-driver-and-better-extension.patch
 	patches.suse/powerpc-book3s64-hugetlb-Fix-disabling-hugetlb-when-fadump-is-active.patch
+	patches.suse/powerpc-Add-preempt-lazy-support.patch
 	patches.suse/powerpc-pseries-iommu-IOMMU-incorrectly-marks-MMIO-r.patch
 	patches.suse/selftests-powerpc-Fix-argument-order-to-timer_sub.patch
 	patches.suse/x86-mce-amd-Remove-shared-threshold-bank-plumbing.patch
