--- a/series.conf
+++ b/series.conf
@@ -4000,6 +4000,7 @@
 	patches.suse/perf-imx9_perf-Introduce-AXI-filter-version-to-refactor-the-driver-and-better-extension.patch
 	patches.suse/powerpc-book3s64-hugetlb-Fix-disabling-hugetlb-when-fadump-is-active.patch
 	patches.suse/powerpc-Add-preempt-lazy-support.patch
+	patches.suse/powerpc-Large-user-copy-aware-of-full-rt-lazy-preemption.patch
 	patches.suse/powerpc-pseries-iommu-IOMMU-incorrectly-marks-MMIO-r.patch
 	patches.suse/selftests-powerpc-Fix-argument-order-to-timer_sub.patch
 	patches.suse/x86-mce-amd-Remove-shared-threshold-bank-plumbing.patch
