--- a/series.conf
+++ b/series.conf
@@ -9389,6 +9389,7 @@
 	patches.suse/powerpc-kvm-hv-pmu-Implement-GSB-message-ops-for-hos.patch
 	patches.suse/powerpc-kvm-hv-pmu-Add-perf-events-for-Hostwide-coun.patch
 	patches.suse/KVM-powerpc-Enable-commented-out-BUILD_BUG_ON-assert.patch
+	patches.suse/powerpc-enable-dynamic-preemption.patch
 	patches.suse/powerpc-pseries-Define-common-functions-for-RTAS-seq.patch
 	patches.suse/powerpc-pseries-Define-papr_indices_io_block-for-pap.patch
 	patches.suse/powerpc-pseries-Add-papr-indices-char-driver-for-ibm.patch
