--- a/series.conf
+++ b/series.conf
@@ -12539,6 +12539,7 @@
 	patches.suse/powerpc-pseries-Add-papr-hvpipe-char-driver-for-HVPIPE-interfaces.patch
 	patches.suse/powerpc-pseries-Send-payload-with-ibm-send-hvpipe-msg-RTAS.patch
 	patches.suse/powerpc-pseries-Receive-payload-with-ibm-receive-hvpipe-msg-RTAS.patch
+	patches.suse/powerpc-pseries-Wakeup-hvpipe-FD-when-the-payload-is-pending.patch
 	patches.suse/powerpc-ftrace-ensure-ftrace-record-ops-are-always-set-for-NOPs.patch
 	patches.suse/powerpc64-modules-correctly-iterate-over-stubs-in-setup_ftrace_ool_stubs.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
