--- a/series.conf
+++ b/series.conf
@@ -12534,6 +12534,7 @@
 	patches.suse/arm64-map-_text-_stext-virtual-address-range-non-executabl.patch
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
+	patches.suse/powerpc-pseries-Define-papr-hvpipe-ioctl.patch
 	patches.suse/powerpc-ftrace-ensure-ftrace-record-ops-are-always-set-for-NOPs.patch
 	patches.suse/powerpc64-modules-correctly-iterate-over-stubs-in-setup_ftrace_ool_stubs.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
