--- a/series.conf
+++ b/series.conf
@@ -11594,6 +11594,7 @@
 	patches.suse/drm-amd-pm-fix-null-pointer-access.patch
 	patches.suse/Documentation-ioctl-number-Fix-linuxppc-dev-mailto-link.patch
 	patches.suse/Documentation-ioctl-number-Extend-Include-File-column-width.patch
+	patches.suse/Documentation-ioctl-number-Correct-full-path-to-papr-physical-attestation.h.patch
 	patches.suse/crypto-sun8i-ce-fix-nents-passed-to-dma_unmap_sg.patch
 	patches.suse/crypto-ccp-Add-missing-bootloader-info-reg-for-pspv6.patch
 	patches.suse/crypto-qat-use-unmanaged-allocation-for-dc_data.patch
