Documentation: ioctl-number: Extend "Include File" column width (jsc#PED-14170).

--- a/series.conf
+++ b/series.conf
@@ -11593,6 +11593,7 @@
 	patches.suse/drm-amd-display-limit-clear_update_flags-to-dcn32-an.patch
 	patches.suse/drm-amd-pm-fix-null-pointer-access.patch
 	patches.suse/Documentation-ioctl-number-Fix-linuxppc-dev-mailto-link.patch
+	patches.suse/Documentation-ioctl-number-Extend-Include-File-column-width.patch
 	patches.suse/crypto-sun8i-ce-fix-nents-passed-to-dma_unmap_sg.patch
 	patches.suse/crypto-ccp-Add-missing-bootloader-info-reg-for-pspv6.patch
 	patches.suse/crypto-qat-use-unmanaged-allocation-for-dc_data.patch
