powerpc/pseries: Define HVPIPE specific macros (jsc#PED-14170).

--- a/series.conf
+++ b/series.conf
@@ -12535,6 +12535,7 @@
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
 	patches.suse/powerpc-pseries-Define-papr-hvpipe-ioctl.patch
+	patches.suse/powerpc-pseries-Define-HVPIPE-specific-macros.patch
 	patches.suse/powerpc-ftrace-ensure-ftrace-record-ops-are-always-set-for-NOPs.patch
 	patches.suse/powerpc64-modules-correctly-iterate-over-stubs-in-setup_ftrace_ool_stubs.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
