powerpc/pseries: Enable HVPIPE event message interrupt (jsc#PED-14170).

--- a/series.conf
+++ b/series.conf
@@ -12540,6 +12540,7 @@
 	patches.suse/powerpc-pseries-Send-payload-with-ibm-send-hvpipe-msg-RTAS.patch
 	patches.suse/powerpc-pseries-Receive-payload-with-ibm-receive-hvpipe-msg-RTAS.patch
 	patches.suse/powerpc-pseries-Wakeup-hvpipe-FD-when-the-payload-is-pending.patch
+	patches.suse/powerpc-pseries-Enable-HVPIPE-event-message-interrupt.patch
 	patches.suse/powerpc-ftrace-ensure-ftrace-record-ops-are-always-set-for-NOPs.patch
 	patches.suse/powerpc64-modules-correctly-iterate-over-stubs-in-setup_ftrace_ool_stubs.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
