powerpc/pseries: HVPIPE changes to support migration (jsc#PED-14170).

--- a/series.conf
+++ b/series.conf
@@ -12542,6 +12542,7 @@
 	patches.suse/powerpc-pseries-Wakeup-hvpipe-FD-when-the-payload-is-pending.patch
 	patches.suse/powerpc-pseries-Enable-HVPIPE-event-message-interrupt.patch
 	patches.suse/powerpc-pseries-Enable-hvpipe-with-ibm-set-system-parameter-RTAS.patch
+	patches.suse/powerpc-pseries-HVPIPE-changes-to-support-migration.patch
 	patches.suse/powerpc-ftrace-ensure-ftrace-record-ops-are-always-set-for-NOPs.patch
 	patches.suse/powerpc64-modules-correctly-iterate-over-stubs-in-setup_ftrace_ool_stubs.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
