powerpc/pseries: Send payload with ibm,send-hvpipe-msg RTAS (jsc#PED-14170).

--- a/series.conf
+++ b/series.conf
@@ -12537,6 +12537,7 @@
 	patches.suse/powerpc-pseries-Define-papr-hvpipe-ioctl.patch
 	patches.suse/powerpc-pseries-Define-HVPIPE-specific-macros.patch
 	patches.suse/powerpc-pseries-Add-papr-hvpipe-char-driver-for-HVPIPE-interfaces.patch
+	patches.suse/powerpc-pseries-Send-payload-with-ibm-send-hvpipe-msg-RTAS.patch
 	patches.suse/powerpc-ftrace-ensure-ftrace-record-ops-are-always-set-for-NOPs.patch
 	patches.suse/powerpc64-modules-correctly-iterate-over-stubs-in-setup_ftrace_ool_stubs.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
