--- a/series.conf
+++ b/series.conf
@@ -12545,6 +12545,7 @@
 	patches.suse/powerpc-pseries-HVPIPE-changes-to-support-migration.patch
 	patches.suse/powerpc-ftrace-ensure-ftrace-record-ops-are-always-set-for-NOPs.patch
 	patches.suse/powerpc64-modules-correctly-iterate-over-stubs-in-setup_ftrace_ool_stubs.patch
+	patches.suse/powerpc-pseries-Define-__u-8-32-types-in-papr_hvpipe_hdr-struct.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
 	patches.suse/btrfs-fix-the-incorrect-max_bytes-value-for-find_loc.patch
 	patches.suse/btrfs-use-smp_mb__after_atomic-when-forcing-COW-in-c.patch
