--- a/series.conf
+++ b/series.conf
@@ -7077,6 +7077,7 @@
 	patches.suse/ALSA-usb-audio-separate-DJM-A9-cap-lvl-options.patch
 	patches.suse/ALSA-hda-realtek-Support-mute-LED-on-HP-Laptop-15s-d.patch
 	patches.suse/ALSA-hda-realtek-fix-micmute-LEDs-on-HP-Laptops-with.patch
+	patches.suse/ALSA-hda-realtek-fix-micmute-LEDs-on-HP-Laptops-with-78f4ca3.patch
 	patches.suse/ASoC-amd-Add-DMI-quirk-for-ACP6X-mic-support.patch
 	patches.suse/ASoC-ti-j721e-evm-Fix-clock-configuration-for-ti-j72.patch
 	patches.suse/ALSA-timer-Don-t-take-register_mutex-with-copy_from-.patch
