selftests/bpf: Remove sockmap_ktls disconnect_after_delete test (bsc#1252365).

--- a/series.conf
+++ b/series.conf
@@ -53984,6 +53984,7 @@
 	patches.suse/bpf-sockmap-fix-duplicated-data-transmission.patch
 	patches.suse/bpf-sockmap-Fix-panic-when-calling-skb_linearize.patch
 	patches.suse/selftest-bpf-benchs-Add-benchmark-for-sockmap-usage.patch
+	patches.suse/selftests-bpf-Remove-sockmap_ktls-disconnect_after_delete-.patch
 	patches.suse/s390-bpf-Store-backchain-even-for-leaf-progs.patch
 	patches.suse/bpf-sockmap-Avoid-using-sk_socket-after-free-when-se.patch
 	patches.suse/bpf-Check-rcu_read_lock_trace_held-in-bpf_map_lookup.patch
