--- a/series.conf
+++ b/series.conf
@@ -7081,6 +7081,7 @@
 	patches.suse/ASoC-amd-Add-DMI-quirk-for-ACP6X-mic-support.patch
 	patches.suse/ASoC-ti-j721e-evm-Fix-clock-configuration-for-ti-j72.patch
 	patches.suse/ALSA-timer-Don-t-take-register_mutex-with-copy_from-.patch
+	patches.suse/ALSA-hda-realtek-Add-support-for-various-HP-Laptops-.patch
 	patches.suse/ASoC-rt722-sdca-Add-some-missing-readable-registers.patch
 	patches.suse/ASoC-SOF-topology-Use-krealloc_array-to-replace-krea.patch
 	patches.suse/ASoC-soc-core-Stop-using-of_property_read_bool-for-n.patch
