--- a/series.conf
+++ b/series.conf
@@ -9203,6 +9203,7 @@
 	patches.suse/ASoC-SOF-Intel-hda-Fix-UAF-when-reloading-module.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Lenovo-Yoga-Pro-7-14A.patch
 	patches.suse/ALSA-hda-realtek-Add-support-for-HP-Agusta-using-CS3.patch
+	patches.suse/ALSA-hda-realtek-Add-new-HP-ZBook-laptop-with-micmut.patch
 	patches.suse/pinctrl-qcom-switch-to-devm_register_sys_off_handler.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-checking-l2cap_chan-security.patch
 	patches.suse/Bluetooth-btusb-use-skb_pull-to-avoid-unsafe-access-.patch
