--- a/series.conf
+++ b/series.conf
@@ -11133,6 +11133,7 @@
 	patches.suse/PM-sleep-console-Fix-the-black-screen-issue.patch
 	patches.suse/PM-Use-true-false-as-power.needs_force_resume-values.patch
 	patches.suse/PM-Move-two-sleep-related-functions-under-CONFIG_PM_.patch
+	patches.suse/PM-Make-pm_runtime_force_resume-work-with-DPM_FLAG_S.patch
 	patches.suse/PM-runtime-Clear-power.needs_force_resume-in-pm_runt.patch
 	patches.suse/PM-runtime-Take-active-children-into-account-in-pm_r.patch
 	patches.suse/powercap-dtpm_cpu-Fix-NULL-pointer-dereference-in-ge.patch
