--- a/series.conf
+++ b/series.conf
@@ -4857,6 +4857,7 @@
 	patches.suse/ASoC-sun4i-spdif-Add-clock-multiplier-settings.patch
 	patches.suse/ASoC-fsl_utils-Add-function-to-constrain-rates.patch
 	patches.suse/ASoC-fsl_sai-Add-sample-rate-constraint.patch
+	patches.suse/ASoC-renesas-rz-ssi-Terminate-all-the-DMA-transactio.patch
 	patches.suse/ASoC-soc-pcm-don-t-use-soc_pcm_ret-on-.prepare-callb.patch
 	patches.suse/ASoC-Intel-avs-Do-not-readq-u32-registers.patch
 	patches.suse/ASoC-Intel-avs-Fix-the-minimum-firmware-version-numb.patch
