ASoC: codecs: wcd937x: make stub functions inline (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12562,6 +12562,7 @@
 	patches.suse/ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/ASoC-qcom-sc8280xp-explicitly-set-S16LE-format-in-sc.patch
 	patches.suse/ASoC-codecs-wcd937x-set-the-comp-soundwire-port-corr.patch
+	patches.suse/ASoC-codecs-wcd937x-make-stub-functions-inline.patch
 	patches.suse/ALSA-usb-audio-add-mono-main-switch-to-Presonus-S182.patch
 	patches.suse/ALSA-usb-audio-fix-race-condition-to-UAF-in-snd_usbm.patch
 	patches.suse/ASoC-stm32-sai-manage-context-in-set_sysclk-callback.patch
