ASoC: rsnd: indicate unsupported clock rate (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5992,6 +5992,7 @@
 	patches.suse/ASoC-arizona-madera-use-fsleep-in-up-down-DAPM-event.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Harden-loops-for-looking-up-A.patch
 	patches.suse/ASoC-SOF-Intel-hda-add-softdep-pre-to-snd-hda-codec-.patch
+	patches.suse/ASoC-rsnd-indicate-unsupported-clock-rate.patch
 	patches.suse/ASoC-SOF-stream-ipc-Check-for-cstream-nullity-in-sof.patch
 	patches.suse/ASoC-SOF-pcm-Clear-the-susbstream-pointer-to-NULL-on.patch
 	patches.suse/ASoC-Intel-sof_sdw-Add-lookup-of-quirk-using-PCI-sub.patch
