--- a/series.conf
+++ b/series.conf
@@ -4858,6 +4858,7 @@
 	patches.suse/ASoC-fsl_utils-Add-function-to-constrain-rates.patch
 	patches.suse/ASoC-fsl_sai-Add-sample-rate-constraint.patch
 	patches.suse/ASoC-renesas-rz-ssi-Terminate-all-the-DMA-transactio.patch
+	patches.suse/ASoC-renesas-rz-ssi-Use-only-the-proper-amount-of-di.patch
 	patches.suse/ASoC-soc-pcm-don-t-use-soc_pcm_ret-on-.prepare-callb.patch
 	patches.suse/ASoC-Intel-avs-Do-not-readq-u32-registers.patch
 	patches.suse/ASoC-Intel-avs-Fix-the-minimum-firmware-version-numb.patch
