ASoC: rsnd: adjust convert rate limitation (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5994,6 +5994,7 @@
 	patches.suse/ASoC-SOF-Intel-hda-add-softdep-pre-to-snd-hda-codec-.patch
 	patches.suse/ASoC-rsnd-indicate-unsupported-clock-rate.patch
 	patches.suse/ASoC-rsnd-don-t-indicate-warning-on-rsnd_kctrl_accep.patch
+	patches.suse/ASoC-rsnd-adjust-convert-rate-limitation.patch
 	patches.suse/ASoC-SOF-stream-ipc-Check-for-cstream-nullity-in-sof.patch
 	patches.suse/ASoC-SOF-pcm-Clear-the-susbstream-pointer-to-NULL-on.patch
 	patches.suse/ASoC-Intel-sof_sdw-Add-lookup-of-quirk-using-PCI-sub.patch
