PM: Check power.needs_force_resume in pm_runtime_force_suspend() (jsc#PED-13973).

--- a/series.conf
+++ b/series.conf
@@ -11135,6 +11135,7 @@
 	patches.suse/PM-Move-two-sleep-related-functions-under-CONFIG_PM_.patch
 	patches.suse/PM-Make-pm_runtime_force_resume-work-with-DPM_FLAG_S.patch
 	patches.suse/PM-runtime-Clear-power.needs_force_resume-in-pm_runt.patch
+	patches.suse/PM-Check-power.needs_force_resume-in-pm_runtime_forc.patch
 	patches.suse/PM-runtime-Take-active-children-into-account-in-pm_r.patch
 	patches.suse/powercap-dtpm_cpu-Fix-NULL-pointer-dereference-in-ge.patch
 	patches.suse/pm-cpupower-Fix-the-snapshot-order-of-tsc-mperf-cloc.patch
