drm/amdgpu: Check vcn sram load return value (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12582,6 +12582,7 @@
 	patches.suse/drm-amd-display-fix-condition-for-setting-timing_adj.patch
 	patches.suse/drm-amd-display-ensure-committing-streams-is-seamles.patch
 	patches.suse/drm-amdgpu-add-range-check-for-RAS-bad-page-address.patch
+	patches.suse/drm-amdgpu-Check-vcn-sram-load-return-value.patch
 	patches.suse/drm-amd-display-Move-setup_stream_attribute.patch
 	patches.suse/drm-amd-display-Increase-AUX-Intra-Hop-Done-Max-Wait.patch
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
