--- a/series.conf
+++ b/series.conf
@@ -55963,6 +55963,7 @@
 	patches.suse/drm-amdgpu-vpe-cancel-delayed-work-in-hw_fini.patch
 	patches.suse/drm-amd-display-Increase-minimum-clock-for-TMDS-420-.patch
 	patches.suse/drm-amd-display-incorrect-conditions-for-failing-dto.patch
+	patches.suse/drm-amdgpu-Respect-max-pixel-clock-for-HDMI-and-DVI-.patch
 	patches.suse/drm-xe-Fix-oops-in-xe_gem_fault-when-running-core_ho.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/drm-panthor-check-bo-offset-alignment-in-vm-bind.patch
