drm/xe/guc: Add more GuC load error status codes (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55964,6 +55964,7 @@
 	patches.suse/drm-amd-display-Increase-minimum-clock-for-TMDS-420-.patch
 	patches.suse/drm-amd-display-incorrect-conditions-for-failing-dto.patch
 	patches.suse/drm-amdgpu-Respect-max-pixel-clock-for-HDMI-and-DVI-.patch
+	patches.suse/drm-xe-guc-Add-more-GuC-load-error-status-codes.patch
 	patches.suse/drm-xe-Fix-oops-in-xe_gem_fault-when-running-core_ho.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/drm-panthor-check-bo-offset-alignment-in-vm-bind.patch
