--- a/series.conf
+++ b/series.conf
@@ -55982,6 +55982,7 @@
 	patches.suse/drm-amdgpu-mes-add-front-end-for-detect-and-reset-hu.patch
 	patches.suse/drm-amdgpu-mes11-implement-detect-and-reset-callback.patch
 	patches.suse/drm-amdgpu-mes12-implement-detect-and-reset-callback.patch
+	patches.suse/drm-amdgpu-Fix-function-header-names-in-amdgpu_conne.patch
 	patches.suse/drm-amdgpu-add-ip-offset-support-for-cyan-skillfish.patch
 	patches.suse/drm-amdgpu-add-support-for-cyan-skillfish-without-IP.patch
 	patches.suse/drm-amdgpu-add-support-for-cyan-skillfish-gpu_info.patch
