drm/amdgpu: Fix unintended error log in VCN5_0_0 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12587,6 +12587,7 @@
 	patches.suse/drm-amd-display-Increase-AUX-Intra-Hop-Done-Max-Wait.patch
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
 	patches.suse/drm-amdgpu-Avoid-rma-causes-GPU-duplicate-reset.patch
+	patches.suse/drm-amdgpu-Fix-unintended-error-log-in-VCN5_0_0.patch
 	patches.suse/drm-amd-amdgpu-Release-xcp-drm-memory-after-unplug.patch
 	patches.suse/drm-amd-display-add-more-cyan-skillfish-devices.patch
 	patches.suse/drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
