--- a/series.conf
+++ b/series.conf
@@ -12647,6 +12647,7 @@
 	patches.suse/drm-msm-a6xx-Fix-PDC-sleep-sequence.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/drm-msm-registers-Generate-_HI-LO-builders-for-reg64.patch
+	patches.suse/drm-exynos-exynos7_drm_decon-remove-ctx-suspended.patch
 	patches.suse/drm-xe-guc-Increase-GuC-crash-dump-buffer-size.patch
 	patches.suse/drm-xe-guc-Set-upper-limit-of-H2G-retries-over-CTB.patch
 	patches.suse/drm-xe-guc-Return-an-error-code-if-the-GuC-load-fail.patch
