drm/msm/a6xx: Fix PDC sleep sequence (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55992,6 +55992,7 @@
 	patches.suse/drm-msm-dsi-phy-Toggle-back-buffer-resync-after-prep.patch
 	patches.suse/drm-msm-dsi-phy_7nm-Fix-missing-initial-VCO-rate.patch
 	patches.suse/drm-msm-make-sure-to-not-queue-up-recovery-more-than.patch
+	patches.suse/drm-msm-a6xx-Fix-PDC-sleep-sequence.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/drm-msm-registers-Generate-_HI-LO-builders-for-reg64.patch
 	patches.suse/drm-xe-guc-Increase-GuC-crash-dump-buffer-size.patch
