efivarfs: Fix slab-out-of-bounds in efivarfs_d_compare (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12120,6 +12120,7 @@
 	patches.suse/xfs-do-not-propagate-ENODATA-disk-errors-into-xattr-code.patch
 	patches.suse/fs-smb-Fix-inconsistent-refcnt-update.patch
 	patches.suse/efi-stmm-Fix-incorrect-buffer-allocation-method.patch
+	patches.suse/efivarfs-Fix-slab-out-of-bounds-in-efivarfs_d_compar.patch
 	patches.suse/KVM-x86-use-array_index_nospec-with-indices-that-com.patch
 	patches.suse/sched-deadline-Fix-dl_server_stopped.patch
 	patches.suse/sched-deadline-Always-stop-dl-server-before-changing.patch
