HID: simplify snto32() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -531,6 +531,7 @@
 	patches.suse/HID-wacom-Interpret-tilt-data-from-Intuos-Pro-BT-as-.patch
 	patches.suse/HID-magicmouse-Apple-Magic-Trackpad-2-USB-C-driver-s.patch
 	patches.suse/msft-hv-3082-HID-hyperv-streamline-driver-probe-to-avoid-devres-i.patch
+	patches.suse/HID-simplify-snto32.patch
 	patches.suse/HID-add-per-device-quirk-to-force-bind-to-hid-generi.patch
 	patches.suse/media-v4l-Add-luma-16-bit-interlaced-pixel-format.patch
 	patches.suse/media-uvcvideo-Add-luma-16-bit-interlaced-pixel-form.patch
