--- a/series.conf
+++ b/series.conf
@@ -12475,6 +12475,7 @@
 	patches.suse/power-supply-sbs-charger-Support-multiple-devices.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 	patches.suse/power-supply-qcom_battmgr-handle-charging-state-chan.patch
+	patches.suse/Revert-ipmi-fix-msg-stack-when-IPMI-is-disconnected.patch
 	patches.suse/pinctrl-single-fix-bias-pull-up-down-handling-in-pin.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
 	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
