--- a/series.conf
+++ b/series.conf
@@ -13086,6 +13086,7 @@
 	patches.suse/rtc-pcf2127-fix-watchdog-interrupt-mask-on-pcf2131.patch
 	patches.suse/rtc-interface-Fix-long-standing-race-when-setting-al.patch
 	patches.suse/rtc-interface-Ensure-alarm-irq-is-enabled-when-UIE-i.patch
+	patches.suse/ipmi-Fix-handling-of-messages-with-provided-receive-.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
 	patches.suse/dpll-zl3073x-Increase-maximum-size-of-flash-utility.patch
 	patches.suse/dpll-zl3073x-Handle-missing-or-corrupted-flash-confi.patch
