kasan: fix GCC mem-intrinsic prefix with sw tags (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12138,6 +12138,7 @@
 	patches.suse/of_numa-fix-uninitialized-memory-nodes-causing-kerne.patch
 	patches.suse/ocfs2-prevent-release-journal-inode-after-journal-sh.patch
 	patches.suse/mm-userfaultfd-fix-kmap_local-LIFO-ordering-for-CONF.patch
+	patches.suse/kasan-fix-GCC-mem-intrinsic-prefix-with-sw-tags.patch
 	patches.suse/mm-damon-core-prevent-unnecessary-overflow-in-damos_.patch
 	patches.suse/proc-fix-missing-pde_set_flags-for-net-proc-files.patch
 	patches.suse/mm-move-page-table-sync-declarations-to-linux-pgtabl.patch
