media: nxp: imx8-isi: m2m: Fix streaming cleanup on release (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12701,6 +12701,7 @@
 	patches.suse/media-s5p-mfc-remove-an-unused-uninitialized-variabl.patch
 	patches.suse/media-pci-mgb4-Fix-timings-comparison-in-VIDIOC_S_DV.patch
 	patches.suse/media-nxp-imx8-isi-Drop-unused-argument-to-mxc_isi_c.patch
+	patches.suse/media-nxp-imx8-isi-m2m-Fix-streaming-cleanup-on-rele.patch
 	patches.suse/media-adv7180-Add-missing-lock-in-suspend-callback.patch
 	patches.suse/media-adv7180-Do-not-write-format-to-device-in-set_f.patch
 	patches.suse/media-adv7180-Only-validate-format-in-querystd.patch
