media: mc: Clear minor number before put device (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12711,6 +12711,7 @@
 	patches.suse/media-i2c-og01a1b-Specify-monochrome-media-bus-forma.patch
 	patches.suse/media-ov08x40-Fix-the-horizontal-flip-control.patch
 	patches.suse/media-vivid-fix-disappearing-Vendor-Command-With-ID-.patch
+	patches.suse/media-mc-Clear-minor-number-before-put-device.patch
 	patches.suse/media-rc-fix-races-with-imon_disconnect.patch
 	patches.suse/media-redrat3-use-int-type-to-store-negative-error-c.patch
 	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
