media: verisilicon: Explicitly disable selection api ioctls for decoders (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12705,6 +12705,7 @@
 	patches.suse/media-adv7180-Add-missing-lock-in-suspend-callback.patch
 	patches.suse/media-adv7180-Do-not-write-format-to-device-in-set_f.patch
 	patches.suse/media-adv7180-Only-validate-format-in-querystd.patch
+	patches.suse/media-verisilicon-Explicitly-disable-selection-api-i.patch
 	patches.suse/media-venus-firmware-Use-correct-reset-sequence-for-.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
 	patches.suse/media-i2c-og01a1b-Specify-monochrome-media-bus-forma.patch
