PM: sleep: Add strict_midlayer flag to struct dev_pm_info (jsc#PED-13973).

--- a/series.conf
+++ b/series.conf
@@ -11137,6 +11137,7 @@
 	patches.suse/PM-runtime-Clear-power.needs_force_resume-in-pm_runt.patch
 	patches.suse/PM-Check-power.needs_force_resume-in-pm_runtime_forc.patch
 	patches.suse/PM-runtime-Introduce-__rpm_get_driver_callback.patch
+	patches.suse/PM-sleep-Add-strict_midlayer-flag-to-struct-dev_pm_i.patch
 	patches.suse/PM-runtime-Take-active-children-into-account-in-pm_r.patch
 	patches.suse/powercap-dtpm_cpu-Fix-NULL-pointer-dereference-in-ge.patch
 	patches.suse/pm-cpupower-Fix-the-snapshot-order-of-tsc-mperf-cloc.patch
