x86/CPU/AMD: Add missing terminator for zen5_rdseed_microcode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56391,6 +56391,7 @@
 	patches.suse/drm-amd-display-Enable-mst-when-it-s-detected-but-ye.patch
 	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
 	patches.suse/drm-xe-guc-Synchronize-Dead-CT-worker-with-unbind.patch
+	patches.suse/x86-CPU-AMD-Add-missing-terminator-for-zen5_rdseed_m.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.suse/btrfs-do-not-update-last_log_commit-when-logging-ino.patch
 	patches.suse/btrfs-scrub-put-bio-after-errors-in-scrub_raid56_par.patch
