PM: EM: Move CPU capacity check to em_adjust_new_capacity() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9464,6 +9464,7 @@
 	patches.suse/ACPI-Add-missing-prototype-for-non-CONFIG_SUSPEND-CO.patch
 	patches.suse/Documentation-ACPI-Use-all-string-data-node-referenc.patch
 	patches.suse/PM-EM-Fix-potential-division-by-zero-error-in-em_com.patch
+	patches.suse/PM-EM-Move-CPU-capacity-check-to-em_adjust_new_capac.patch
 	patches.suse/cpufreq-amd-pstate-Move-max_perf-limiting-in-amd_pstate_update.patch
 	patches.suse/cpufreq-amd-pstate-Add-offline-online-and-suspend-callbacks-for-amd_pstate_driver.patch
 	patches.suse/cpufreq-amd-pstate-Add-support-for-the-Requested-CPU-Min-frequency-BIOS-option.patch
