--- a/series.conf
+++ b/series.conf
@@ -6980,6 +6980,7 @@
 	patches.suse/cpuidle-menu-Tweak-threshold-use-in-get_typical_interval.patch
 	patches.suse/cpuidle-menu-Eliminate-outliers-on-both-ends-of-the-sample-set.patch
 	patches.suse/cpuidle-menu-Update-documentation-after-get_typical_interval-changes.patch
+	patches.suse/PM-EM-Drop-unused-parameter-from-em_adjust_new_capac.patch
 	patches.suse/PM-EM-use-kfree_rcu-to-simplify-the-code.patch
 	patches.suse/PM-hibernate-Avoid-deadlock-in-hibernate_compressor_.patch
 	patches.suse/PM-sleep-Adjust-check-before-setting-power.must_resu.patch
