--- a/series.conf
+++ b/series.conf
@@ -12499,6 +12499,7 @@
 	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
 	patches.suse/cpufreq-scmi-Account-for-malformed-DT-in-scmi_dev_used_by_cpus.patch
 	patches.suse/cpufreq-intel_pstate-Fix-object-lifecycle-issue-in-update_qos_request.patch
+	patches.suse/PM-EM-Fix-late-boot-with-holes-in-CPU-topology.patch
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 	patches.suse/PM-devfreq-rockchip-dfi-double-count-on-RK3588.patch
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
