--- a/series.conf
+++ b/series.conf
@@ -56425,6 +56425,7 @@
 	patches.suse/mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM_DEFAUL.patch
 	patches.suse/drm-amd-display-Allow-VRR-params-change-if-unsynced-.patch
 	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
+	patches.suse/x86-CPU-AMD-Add-additional-fixed-RDSEED-microcode-re.patch
 
 	########################################################
 	# end of sorted patches
