--- a/series.conf
+++ b/series.conf
@@ -12765,6 +12765,7 @@
 	patches.suse/wifi-rtw89-obtain-RX-path-from-ppdu-status-IE00.patch
 	patches.suse/wifi-rtw89-renew-a-completion-for-each-H2C-command-w.patch
 	patches.suse/wifi-rtw89-fix-use-after-free-in-rtw89_core_tx_kick_.patch
+	patches.suse/wifi-rtw89-avoid-possible-TX-wait-initialization-rac.patch
 	patches.suse/wifi-rtw89-avoid-circular-locking-dependency-in-ser_.patch
 	patches.suse/wifi-ath12k-fix-the-fetching-of-combined-rssi.patch
 	patches.suse/wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
