tty: serial: ip22zilog: Use platform device for probing (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12895,6 +12895,7 @@
 	patches.suse/mtd-rawnand-fsmc-Default-to-autodetect-buswidth.patch
 	patches.suse/mtd-rawnand-atmel-Fix-error-handling-path-in-atmel_n.patch
 	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
+	patches.suse/tty-serial-ip22zilog-Use-platform-device-for-probing.patch
 	patches.suse/serial-max310x-Add-error-checking-in-probe.patch
 	patches.suse/tty-serial-Modify-the-use-of-dev_err_probe.patch
 	patches.suse/tty-n_gsm-Don-t-block-input-queue-by-waiting-MSC.patch
