--- a/series.conf
+++ b/series.conf
@@ -5301,6 +5301,7 @@
 	patches.suse/usb-host-xhci-plat-Assign-shared_hcd-rsrc_start.patch
 	patches.suse/usb-typec-tcpm-set-SRC_SEND_CAPABILITIES-timeout-to-.patch
 	patches.suse/usb-phy-Remove-API-devm_usb_put_phy.patch
+	patches.suse/thunderbolt-Increase-DPRX-capabilities-read-timeout.patch
 	patches.suse/USB-Replace-own-str_plural-with-common-one.patch
 	patches.suse/USB-host-Use-str_enable_disable-like-helpers.patch
 	patches.suse/USB-typec-Use-str_enable_disable-like-helpers.patch
