gendwarfksyms: Fix build on 32-bit hosts (gendwarfksyms).

--- a/series.conf
+++ b/series.conf
@@ -39,6 +39,7 @@
 	patches.rpmify/usrmerge-Adjust-module-path-in-the-kernel-sources.patch
 	patches.rpmify/btf-pahole-j1-option.patch
 	patches.rpmify/power-supply-use-ktime_divns-to-avoid-64-bit-divisio.patch
+	patches.rpmify/gendwarfksyms-Fix-build-on-32-bit-hosts.patch
 
 	########################################################
 	# The sorted section should contain all patches that are
