Revert "ACPI: Suppress misleading SPCR console message when SPCR table is absent" (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13305,6 +13305,7 @@
 	patches.suse/btrfs-do-not-update-last_log_commit-when-logging-ino.patch
 	patches.suse/btrfs-scrub-put-bio-after-errors-in-scrub_raid56_par.patch
 	patches.suse/btrfs-release-root-after-error-in-data_reloc_print_w.patch
+	patches.suse/Revert-ACPI-Suppress-misleading-SPCR-console-message.patch
 	patches.suse/nfsd-fix-refcount-leak-in-nfsd_set_fh_dentry.patch
 	patches.suse/nfsd-add-missing-FATTR4_WORD2_CLONE_BLKSIZE-from-supported-attributes.patch
 	patches.suse/NFSD-free-copynotify-stateid-in-nfs4_free_ol_stateid.patch
