- ASoC: nau8821: Consistently clear interrupts before unmasking   (git-fixes). - Refresh   patches.suse/ASoC-nau8821-Add-DMI-quirk-to-bypass-jack-debounce-c.patch.

--- a/series.conf
+++ b/series.conf
@@ -13142,6 +13142,7 @@
 	patches.suse/ASoC-amd-sdw_utils-avoid-NULL-deref-when-devm_kaspri.patch
 	patches.suse/ASoC-nau8821-Cancel-jdet_work-before-handling-jack-e.patch
 	patches.suse/ASoC-nau8821-Generalize-helper-to-clear-IRQ-status.patch
+	patches.suse/ASoC-nau8821-Consistently-clear-interrupts-before-un.patch
 	patches.suse/ASoC-nau8821-Add-DMI-quirk-to-bypass-jack-debounce-c.patch
 	patches.suse/nvme-multipath-Skip-nr_active-increments-in-RETRY-di.patch
 	patches.suse/nvme-auth-update-sc_c-in-host-response.patch
