drivers/usb/core: refactor max with max_t (jsc#PED-14291).

--- a/series.conf
+++ b/series.conf
@@ -2462,6 +2462,7 @@
 	patches.suse/usb-dwc3-gadget-Add-missing-check-for-single-port-RA.patch
 	patches.suse/usb-dwc3-core-Set-force_gen1-bit-for-all-applicable-.patch
 	patches.suse/usb-cdns3-Synchronise-PCI-IDs-via-common-data-base.patch
+	patches.suse/drivers-usb-core-refactor-max-with-max_t.patch
 	patches.suse/USB-make-single-lock-for-all-usb-dynamic-id-lists.patch
 	patches.suse/USB-properly-lock-dynamic-id-list-when-showing-an-id.patch
 	patches.suse/USB-make-to_usb_driver-use-container_of_const.patch
