ACPI: bus: change the prototype for acpi_get_physical_device_location (jsc#PED-14291).

--- a/series.conf
+++ b/series.conf
@@ -4679,6 +4679,7 @@
 	patches.suse/cpupower-fix-TSC-MHz-calculation.patch
 	patches.suse/APEI-GHES-Have-GHES-honor-the-panic-setting.patch
 	patches.suse/ACPI-fan-cleanup-resources-in-the-error-path-of-.pro.patch
+	patches.suse/ACPI-bus-change-the-prototype-for-acpi_get_physical_.patch
 	patches.suse/thermal-intel-int340x-processor-Enable-MMIO-RAPL-for.patch
 	patches.suse/ACPI-DPTF-Support-Panther-Lake.patch
 	patches.suse/thermal-intel-int340x-Panther-Lake-DLVR-support.patch
