USB: Optimize goto logic in API usb_register_driver() (jsc#PED-14291).

--- a/series.conf
+++ b/series.conf
@@ -5333,6 +5333,7 @@
 	patches.suse/usb-dwc3-core-Disable-USB2-retry-for-DWC_usb31-1.80a.patch
 	patches.suse/USB-Fix-the-issue-of-task-recovery-failure-caused-by.patch
 	patches.suse/usb-common-expand-documentation-for-USB-functions.patch
+	patches.suse/USB-Optimize-goto-logic-in-API-usb_register_driver.patch
 	patches.suse/usb-typec-tcpci-set-local-CC-to-Rd-only-when-cc1-cc2-status-is-Rp.patch
 	patches.suse/usb-typec-tcpm-Add-support-for-parsing-pd-revision-D.patch
 	patches.suse/usb-typec-tcpm-Add-new-AMS-for-Get_Revision-response.patch
