- USB: Use str_enable_disable-like helpers (jsc#PED-14291). - Refresh   patches.suse/usb-common-usb-conn-gpio-use-a-unique-name-for-usb-c.patch.

--- a/series.conf
+++ b/series.conf
@@ -5363,6 +5363,7 @@
 	patches.suse/USB-Replace-own-str_plural-with-common-one.patch
 	patches.suse/USB-host-Use-str_enable_disable-like-helpers.patch
 	patches.suse/USB-typec-Use-str_enable_disable-like-helpers.patch
+	patches.suse/USB-Use-str_enable_disable-like-helpers.patch
 	patches.suse/usb-dwc3-gadget-Reinitiate-stream-for-all-host-NoStr.patch
 	patches.suse/usb-quirks-Add-NO_LPM-quirk-for-TOSHIBA-TransMemory-.patch
 	patches.suse/USB-serial-quatech2-fix-null-ptr-deref-in-qt2_proces.patch
